--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -3,4 +3,7 @@ project(C__)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(C__ main.cpp)
+
+add_executable(Demo Demo.cpp
+        Demo.cpp
+        Demo2.cpp)
